# Sensors

./: CMakeLists.txt  gripper.cpp  gripper.h  gripper.h.autosave  main.cpp  package.xml  sensorprocessing.cpp  sensorprocessing.h
To be added into catkin_ws/: RE. ROS COMPONENT FILES_FETCH.txt
src/: gripper.cpp  gripper.h  main.cpp  sensorprocessing.h  sensors_example_node.cpp
test/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  Sensors  cmake_install.cmake
test/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
test/catkin_generated/installspace/: 41014project2022.pc  41014project2022Config.cmake
test/catkin_generated/stamps/41014project2022/: package.xml.stamp
test/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/devel/lib/41014project2022/: Sensors
test/devel/lib/pkgconfig/: 41014project2022.pc
test/devel/share/41014project2022/cmake/: 41014project2022Config.cmake
test/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
